--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %}Studs Terkel Radio Archive Feed{% endblock %}
+{% block title %}Studs Terkel Radio Archive Podcast{% endblock %}
 
 {% block content %} 
   <div class="row">
-    <div class="one-half column" style="margin-top: 25%">
-        <h1>Studs Terkel Radio Archive Feed</h1>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+    <div class="one-half column" style="margin-top: 15%">
+        <h1>The Studs Terkel Archive Podcast</h1>
+        <p>Selections from <a href="https://studsterkel.wfmt.com/">the WFMT collection</a> of Terkel’s radio interviews, delivered several times each week. An unofficial feed compiled by <a href="ihttps://palewi.re/who-is-ben-welsh/">Ben Welsh</a>.</p>
+        <div>
+            <b>Get the feed</b>: <a href="./feed.xml">RSS</a>
+        </div>
     </div>
   </div>
 {% endblock content %}
