--- a/static/css/skeleton.css
+++ b/static/css/skeleton.css
@@ -1,31 +1,3 @@
-/*
-* Skeleton V2.0.4
-* Copyright 2014, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 12/29/2014
-*/
-
-
-/* Table of contents
-––––––––––––––––––––––––––––––––––––––––––––––––––
-- Grid
-- Base Styles
-- Typography
-- Links
-- Buttons
-- Forms
-- Lists
-- Code
-- Tables
-- Spacing
-- Utilities
-- Clearing
-- Media Queries
-*/
-
-
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
@@ -121,13 +93,21 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  font-size: 1.6em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
   font-family: 'Montserrat', sans-serif;
   color: #222; 
+  background-color: #F1F1F1;
 }
 
+@keyframes shadow {
+      from {text-shadow: -2px -2px #41B6E6;}
+      25%  {text-shadow:  2px -2px #E4002B;}
+      50%  {text-shadow:  2px  2px #41B6E6;}
+      75%  {text-shadow: -2px  2px #E4002B;}
+      to   {text-shadow: -2px -2px #41B6E6;}
+}
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -135,7 +115,18 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 1.2rem;
   font-weight: 300; }
-h1 { font-family: 'Libre Baskerville', serif; font-weight: 700; font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
+h1 {
+  animation-direction: normal;
+  animation-iteration-count: infinite; 
+  animation-name: shadow;
+  animation-duration: 6s;
+  animation-timing-function: ease-in-out;
+  font-family: 'Libre Baskerville', serif;
+  font-weight: 700;
+  font-size: 4.0rem;
+  line-height: 1.2;
+  letter-spacing: -.1rem;
+}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
@@ -153,15 +144,16 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 }
 
 p {
-  margin-top: 0; }
+  margin-top: 0; 
+}
 
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #41B6E6; text-decoration: none; }
 a:hover {
-  color: #0FA0CE; }
+  color: #E4002B; text-decoration: underline; }
 
 
 /* Buttons
