--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
   <title>{% block title %}{% endblock title %}</title>
   <meta name="description" content="{% block description %}{% endblock description %}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% block extrameta %}
+  {% endblock %}
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
