--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,19 @@
 
 {% block title %}Studs Terkel Radio Archive Podcast{% endblock %}
 
+{% block extrameta %}
+<meta property="og:url" content="http://studs.show" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Studs Terkel Radio Archive Podcast" />
+<meta property="og:description"
+      content="Selections from the WFMT collection of Terkel’s radio interviews." />
+<meta property="og:image"
+      content="{{ url_for('static', filename='images/social.png') }}" />
+<meta property="og:image:width" content="1000">
+<meta property="og:image:height" content="525">
+<meta property="og:image:type" content="image/png">
+{% endblock %}
+
 {% block content %} 
   <div class="row">
     <div class="one-half column" style="margin-top: 5%">
