--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 {% block title %}Studs Terkel Radio Archive Podcast{% endblock %}
 
 {% block extrameta %}
+<link rel="canonical" href="http://studs.show" />
 <meta property="og:url" content="http://studs.show" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Studs Terkel Radio Archive Podcast" />
