Make titles match

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Studs Terkel Radio Archive Podcast{% endblock %}
+{% block title %}Studs Terkel Archive Podcast{% endblock %}
 
 {% block extrameta %}
 <link rel="canonical" href="http://studs.show" />
 <meta property="og:url" content="http://studs.show" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Studs Terkel Radio Archive Podcast" />
+<meta property="og:title" content="Studs Terkel Archive Podcast" />
 <meta property="og:description"
       content="Selections from the WFMT collection of Terkel’s radio interviews." />
 <meta property="og:image"
