--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <h1>The Studs Terkel Archive Podcast</h1>
         <p>Selections from <a href="https://studsterkel.wfmt.com/">the WFMT collection</a> of Terkel’s radio interviews, delivered several times each week. An unofficial feed compiled by <a href="ihttps://palewi.re/who-is-ben-welsh/">Ben Welsh</a>.</p>
         <div>
-            <b>Subscribe now</b>: <a href="./feed.xml">RSS</a>
+            <b>Subscribe</b>: <a href="./feed.xml">RSS</a>
         </div>
     </div>
   </div>
