--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   <div class="row">
     <div class="one-half column" style="margin-top: 5%">
         <h1>The Studs Terkel Archive Podcast</h1>
-        <p>Selections from <a href="https://studsterkel.wfmt.com/">the WFMT collection</a> of Terkel’s radio interviews, delivered several times each week. An unofficial feed compiled by <a href="ihttps://palewi.re/who-is-ben-welsh/">Ben Welsh</a>.</p>
+        <p>Selections from <a href="https://studsterkel.wfmt.com/">the WFMT collection</a> of Terkel’s radio interviews, delivered several times each week. An unofficial feed compiled by <a href="https://palewi.re/who-is-ben-welsh/">Ben Welsh</a>.</p>
         <div>
             <b>Subscribe</b>: <a href="./feed.xml">RSS</a>
         </div>
