--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,13 @@
 <meta property="og:image:width" content="1000">
 <meta property="og:image:height" content="525">
 <meta property="og:image:type" content="image/png">
+
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:creator" content="@palewire" />
+<meta property="og:url" content="https://studs.show/" />
+<meta property="og:title" content="Studs Terkel Archive Podcast" />
+<meta property="og:description" content="Selections from the WFMT collection of Terkel’s radio interview." />
+<meta property="og:image" content="{{ url_for('static', filename='images/social.png') }}" />
 {% endblock %}
 
 {% block content %} 
