--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}Studs Terkel Archive Podcast{% endblock %}
+{% block description %}Selections from the WFMT collection of Terkel’s radio interviews, delivered several times each week.{% endblock %}
 
 {% block extrameta %}
-<link rel="canonical" href="http://studs.show" />
+<link rel="canonical" href="https://studs.show" />
 <meta property="og:url" content="http://studs.show" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Studs Terkel Archive Podcast" />
