--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 
 {% block extrameta %}
 <link rel="canonical" href="https://studs.show" />
+<link type="application/rss+xml" rel="alternate" title="The Studs Terkel Archive Podcast" href="https://studs.show/feed.xml"/>
 <meta property="og:url" content="http://studs.show" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Studs Terkel Archive Podcast" />
